changed file name to cluster-viz.tex

--- a/runs/patients/runs/tsne/report/cluster-viz.tex
+++ b/runs/patients/runs/tsne/report/cluster-viz.tex
@@ -47,7 +47,7 @@
 %}}}1
 
 % Title Settings
-\title{Mclust and FlowSOM Visualized via TSNE on \\ Patients Data}
+\title{Visualizations of Mclust and FlowSOM on \\ Patients Data}
 \author{Arthur Lui}
 \date{\today} % \date{} to set date to empty
 
