--- a/runs/patients/runs/run2/tex/run2.tex
+++ b/runs/patients/runs/run2/tex/run2.tex
@@ -241,8 +241,7 @@ final cell-counts in each sample was (4556, 1308, 12256).
     \imgtemplate{p.pdf}{\imscale}
   \end{center}
   % TODO: Write more?
-  \caption{The posterior mean of $p_i$ is usually between 0.2 and 0.4, and
-  sometimes between 0.4 and 0.5. The spread is large.}
+  \caption{}
   \label{fig:ppost}
 \end{figure}
  
@@ -339,7 +338,7 @@ final cell-counts in each sample was (4556, 1308, 12256).
     \imgtemplate{dden/dden_i1_j1.pdf}{\imscale}
   \end{center}
   % TODO: Write more?
-  \caption{Data fit is rather good.}
+  \caption{}
   \label{fig:ddi1j1}
 \end{figure}
 
