added Rcounts plots

--- a/runs/patients/runs/run1/tex/run1.tex
+++ b/runs/patients/runs/run1/tex/run1.tex
@@ -279,6 +279,16 @@ final cell-counts in each sample was (4556, 1308, 12256).
 \end{figure}
 
 \newpage
+\section{Posterior distribution for $R_i$}
+\begin{figure}[H]
+  \begin{center}  % 6 x 5
+    \imgtemplate{Rcounts.pdf}{.4}
+  \end{center}
+  \caption{Posterior distribution for $R_i$.}
+  \label{fig:W-post}
+\end{figure}
+ 
+\newpage
 \section{Box plots for $W$}
 \begin{figure}[H]
   \begin{center}  % 6 x 5
