made tsne for fam

--- a/runs/patients/runs/cluster-viz/report/cluster-viz.tex
+++ b/runs/patients/runs/cluster-viz/report/cluster-viz.tex
@@ -61,22 +61,33 @@
 \section{Mclust and FlowSOM on Patients Data Visualized via TSNE}
 
 \begin{figure}[H]
-  \begin{centering}
-    \begin{tabular}{ccc}
-      (a) FlowSOM sample 1 &
-      (b) FlowSOM sample 2 &
-      (c) FlowSOM sample 3 \\
-      \includegraphics[scale=0.35]{\imgdir/flowsom-tsne-combined-1.pdf} &
-      \includegraphics[scale=0.35]{\imgdir/flowsom-tsne-combined-2.pdf} &
-      \includegraphics[scale=0.35]{\imgdir/flowsom-tsne-combined-3.pdf} \\
-      (d) Mclust sample 1 &
-      (e) Mclust sample 2 &
-      (f) Mclust sample 3 \\
-      \includegraphics[scale=0.35]{\imgdir/mclust-tsne-combined-1.pdf} &
-      \includegraphics[scale=0.35]{\imgdir/mclust-tsne-combined-2.pdf} &
-      \includegraphics[scale=0.35]{\imgdir/mclust-tsne-combined-3.pdf} \\
-    \end{tabular}
-  \end{centering}
+  \centering
+  \begin{tabular}{ccc}
+    (a) FlowSOM sample 1 &
+    (b) FlowSOM sample 2 &
+    (c) FlowSOM sample 3 \\
+    \includegraphics[scale=0.25]{\imgdir/flowsom-tsne-combined-1.pdf} &
+    \includegraphics[scale=0.25]{\imgdir/flowsom-tsne-combined-2.pdf} &
+    \includegraphics[scale=0.25]{\imgdir/flowsom-tsne-combined-3.pdf} \\
+    (d) Mclust sample 1 &
+    (e) Mclust sample 2 &
+    (f) Mclust sample 3 \\
+    \includegraphics[scale=0.25]{\imgdir/mclust-tsne-combined-1.pdf} &
+    \includegraphics[scale=0.25]{\imgdir/mclust-tsne-combined-2.pdf} &
+    \includegraphics[scale=0.25]{\imgdir/mclust-tsne-combined-3.pdf} \\
+    (g) FAM $\phi=0$ sample 1 &
+    (h) FAM $\phi=0$ sample 2 &
+    (i) FAM $\phi=0$ sample 3 \\
+    \includegraphics[scale=0.25]{\imgdir/fam-phi0-tsne-combined-1.pdf} &
+    \includegraphics[scale=0.25]{\imgdir/fam-phi0-tsne-combined-2.pdf} &
+    \includegraphics[scale=0.25]{\imgdir/fam-phi0-tsne-combined-3.pdf} \\
+    (j) FAM $\phi=1$ sample 1 &
+    (k) FAM $\phi=1$ sample 2 &
+    (l) FAM $\phi=1$ sample 3 \\
+    \includegraphics[scale=0.25]{\imgdir/fam-phi1-tsne-combined-1.pdf} &
+    \includegraphics[scale=0.25]{\imgdir/fam-phi1-tsne-combined-2.pdf} &
+    \includegraphics[scale=0.25]{\imgdir/fam-phi1-tsne-combined-3.pdf} \\
+  \end{tabular}
   \caption{Clusterings from Mclust (VII) and FlowSOM on three patient samples,
   visualized using TSNE. Both the clustering and TSNE were performed jointly on
   the three samples. For both Mclust and FlowSOM, the optimal number of
@@ -88,22 +99,21 @@
 \section{Mclust and FlowSOM on Patients Data Visualized via Heatmaps}
 
 \begin{figure}[H]
-  \begin{centering}
-    \begin{tabular}{ccc}
-      (a) FlowSOM sample 1 &
-      (b) FlowSOM sample 2 &
-      (c) FlowSOM sample 3 \\
-      \includegraphics[scale=0.35]{\imgdir/flowsom-heatmap-1.pdf} &
-      \includegraphics[scale=0.35]{\imgdir/flowsom-heatmap-2.pdf} &
-      \includegraphics[scale=0.35]{\imgdir/flowsom-heatmap-3.pdf} \\
-      (d) Mclust sample 1 &
-      (e) Mclust sample 2 &
-      (f) Mclust sample 3 \\
-      \includegraphics[scale=0.35]{\imgdir/mclust-heatmap-1.pdf} &
-      \includegraphics[scale=0.35]{\imgdir/mclust-heatmap-2.pdf} &
-      \includegraphics[scale=0.35]{\imgdir/mclust-heatmap-3.pdf} \\
-    \end{tabular}
-  \end{centering}
+  \centering
+  \begin{tabular}{ccc}
+    (a) FlowSOM sample 1 &
+    (b) FlowSOM sample 2 &
+    (c) FlowSOM sample 3 \\
+    \includegraphics[scale=0.35]{\imgdir/flowsom-heatmap-1.pdf} &
+    \includegraphics[scale=0.35]{\imgdir/flowsom-heatmap-2.pdf} &
+    \includegraphics[scale=0.35]{\imgdir/flowsom-heatmap-3.pdf} \\
+    (d) Mclust sample 1 &
+    (e) Mclust sample 2 &
+    (f) Mclust sample 3 \\
+    \includegraphics[scale=0.35]{\imgdir/mclust-heatmap-1.pdf} &
+    \includegraphics[scale=0.35]{\imgdir/mclust-heatmap-2.pdf} &
+    \includegraphics[scale=0.35]{\imgdir/mclust-heatmap-3.pdf} \\
+  \end{tabular}
   \caption{Clusterings from Mclust (VII) and FlowSOM on three patient samples,
   visualized using heatmaps. Both the clustering and TSNE were performed jointly on
   the three samples. For both Mclust and FlowSOM, the optimal number of
