--- a/runs/patients/runs/run4/tex/run4.tex
+++ b/runs/patients/runs/run4/tex/run4.tex
@@ -122,8 +122,8 @@ final cell-counts in each sample was (4556, 1308, 12256).
     $M=5$ was used.
   \item \textbf{Some Priors:}
   \begin{itemize}
-    \item $w^\star_{i,k} \sim \Gam(\text{shape}=1, \text{rate}=1/2)$
-    \item $p_c \sim \text{Beta}(1, 9)$
+    \item $w^\star_{i,k} \sim \Gam(\text{shape}=1000, \text{rate}=10)$
+    \item $p_c \sim \text{Beta}(1, 99)$
     \item $L_0=6$, $L_1=3$
     \item $\alpha \sim \Gam(1, 1)$
     \item $\delta_0 \sim \TN^-(1, 0.1)$
